# AR_SecretBox

./: ARActivity.kt  MainActivity.kt  README.md  TreasureDao.kt  box345.glb
MyApplication/MyApplication/app/: build.gradle.kts
MyApplication/MyApplication/app/src/main/cpp/: jni_interface.cc
MyApplication/MyApplication/app/src/main/java/com/example/myapplication/: CameraPermissionHelper.java  DepthSettings.java  InstantPlacementSettings.java  JniInterface.java  MainActivity.kt
MyApplication/MyApplication/app/src/main/res/layout/: activity_main.xml
MyApplication/MyApplication/gradle/wrapper/: gradle-wrapper.properties
MyApplication/app/: build.gradle.kts
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/cpp/: CMakeLists.txt  hello_ar_application.cc  hello_ar_application.h  jni_interface.cc  native-lib.cpp  plane_renderer.cc  texture.cc  util.cc
MyApplication/app/src/main/java/com/example/myapplication/: HelloArActivity.java  MainActivity.kt
MyApplication/app/src/main/res/layout/: activity_main.xml
TreasureAR/: build.gradle.kts  settings.gradle.kts
TreasureAR/app/: build.gradle.kts
TreasureAR/app/src/androidTest/java/com/example/treasurear/: ExampleInstrumentedTest.kt
TreasureAR/app/src/main/: AndroidManifest.xml
TreasureAR/app/src/main/assets/: treasure_data.json
TreasureAR/app/src/main/java/com/example/treasurear/data/dao/: TreasureDao.kt
TreasureAR/app/src/main/java/com/example/treasurear/data/db/: AppDatabase.kt
TreasureAR/app/src/main/java/com/example/treasurear/data/entity/: TreasureEntity.kt  ZoneEntity.kt  subZoneEntity.kt
TreasureAR/app/src/main/java/com/example/treasurear/data/initial/: DataInitializer.kt  TreasureData.kt
TreasureAR/app/src/main/java/com/example/treasurear/ui/ar/: ARActivity.kt
TreasureAR/app/src/main/res/drawable/: category_button_default.xml  category_button_selected.xml
TreasureAR/app/src/main/res/layout/: activity_ar.xml  activity_main.xml  activity_pokedex.xml  activity_subzone.xml  activity_treasure_list.xml  dialog_treasure_result.xml  item_header.xml  item_subzone.xml  item_treasure.xml
TreasureAR/app/src/main/res/values/: strings.xml  themes.xml
TreasureAR/app/src/test/java/com/example/treasurear/: ExampleUnitTest.kt
TreasureAR/gradle/: libs.versions.toml
TreasureAR/gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
